--- a/app/globals.css
+++ b/app/globals.css
@@ -52,23 +52,63 @@ body{
 
 @media(max-width: 639px){
   .radius{
-    border-radius: 0px 20px 0px 20px;
+    border-radius: 30px 0px 0px 30px;
   } 
 
   .radius2{
-    border-radius: 20px 20px 0px 0px;
+    border-radius: 30px 30px 0px 0px;
   } 
+
+    .radius3{
+    border-radius: 0px 40px 40px 00px;
+  } 
+
 }
 
 @media(min-width: 640px){
   .radius{
-    border-radius: 0px 40px 0px 40px;
+    border-radius: 0px 0px 40px 0px;
   } 
 
   .radius2{
-    border-radius: 50px 0px 0px 0px;
+    border-radius: 0px 40px 40px 0px;
   } 
 }
+
+
+@media(min-width: 640px){
+  .radius3{
+    border-radius: 0px 0px 0px 40px;
+  } 
+
+  .radius2{
+    border-radius: 0px 40px 40px 0px;
+  } 
+}
+
+@media(min-width: 640px){
+  .radius3{
+    border-radius: 0px 0px 0px 40px;
+  } 
+
+  .radius4{
+    border-radius: 40px 0px 0px 0px;
+  } 
+}
+
+
+@media(min-width: 640px){
+  .radius3{
+    border-radius: 0px 0px 0px 40px;
+  } 
+
+  .radius5{
+    border-radius: 0px 40px 0px 0px;
+  } 
+}
+
+
+
 
 @layer base {
   :root {
