--- a/app/globals.css
+++ b/app/globals.css
@@ -62,13 +62,31 @@ body{
     .radius3{
     border-radius: 0px 40px 40px 00px;
   } 
+}
 
+@media(max-width: 639px){
+  .radiuser{
+    border-radius: 30px 0px 0px 30px;
+  } 
+
+  .radius2{
+    border-radius: 30px 30px 0px 0px;
+  } 
+
+    .radius3{
+    border-radius: 0px 40px 40px 00px;
+  } 
 }
 
 @media(min-width: 640px){
   .radius{
+    border-radius: 0px 40px 0px 40px;
+  } 
+
+  .radiuser{
     border-radius: 0px 0px 40px 0px;
   } 
+
 
   .radius2{
     border-radius: 0px 40px 40px 0px;
