--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,9 @@ body,
 }
 
 body{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  /* font-family: 'Sora', sans-serif; */
   background-color: #ECEFF1;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
