--- a/app/globals.css
+++ b/app/globals.css
@@ -8,10 +8,21 @@ body,
   height: 100%;
 }
 
+:root {
+  --topbar-height: 120px;
+}
+
+:root {
+  --font-system: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell;
+ 
+}
+
 body{
   /* font-family: 'Sora', sans-serif; */
-  background-color: #ECEFF1;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  /* background-color: #ECEFF1; */
+  font-family: var(--font-inter), var(--font-system), sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
@@ -47,7 +58,6 @@ body{
 };
 
 .fixer{
-  z-index: 999;
   top: 0;
   position: sticky;
   left: 0;
@@ -55,6 +65,12 @@ body{
 
 .link.active{
   background-color: #c8d2de;
+}
+
+
+.custom-footer {
+  height: 100px; 
+  overflow: hidden; 
 }
 
 @media(max-width: 639px){
